--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <button class="glowing-orb" id="orb"></button>
+    <div id="status-text" class="status-text"></div>
     <script src="{{ url_for('static',filename='design.js') }}"> </script>
 </body>
 </html>
