--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 <body>
     <button class="glowing-orb" id="orb"></button>
     <div id="status-text" class="status-text"></div>
+    <div class="carebot-text">carebot</div>
     <script src="{{ url_for('static',filename='design.js') }}"> </script>
 </body>
 </html>
